Updates layout issues

--- a/site_media/css/base.css
+++ b/site_media/css/base.css
@@ -1009,12 +1009,13 @@ body {
     position: relative;
     top: 40px;
     left: -140px;
+    min-height: 240px;
 
 }
 
 .update-pub-title, .update-pub-title a, .update-pub-title a:visited {
     position: relative;
-    top: -100px;
+    top: 20px;
     left: -70px;
     width: 200px;
     font-size: 11pt;
@@ -1025,16 +1026,16 @@ body {
 
 .update-pub-description {
     position: relative;
-    top: -90px;
+    top: -130px;
     max-width: 300px;
-    left: 220px;
+    left: 205px;
     text-align: left;
     font-size: 9pt;
 }
 
 .update-item {
     position: relative;
-    min-height: 240px;
+    max-height: 270px;
 }
 
 .thumb-page-click {
